# podcast-graphs-web

./: .cfignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  EVALUATION_REPORT.md  IMPROVEMENTS.md  MIGRATION_SUMMARY.md  MODEL_FIXES.md  QUICKSTART.md  README.md  index.html  index.json  notes.md  pyproject.toml  styles.css  sync-graphs.sh  wrangler.toml
docs/: pipeline.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.ts  state.ts  types.ts
graphs/a_bit_fruity_with_matt_bernstein/: a_morning_with_vivian_wilson_elons_estranged_daughter_graph.html  a_morning_with_vivian_wilson_elons_estranged_daughter_normalized_graph.html  alpha_males_are_making_men_lonelier_with_ryan_broderick_graph.html  amber_heard_the_myth_of_the_perfect_victim_graph.html  amy_schumer_the_plague_of_white_feminism_with_broey_deschanel_graph.html  annoying_gays_are_not_the_problem_graph.html  becoming_a_woman_with_miss_benny_graph.html  blake_lively_and_the_amber_heard_effect_graph.html  bud_light_and_the_end_of_rainbow_marketing_for_now_graph.html  bud_light_and_the_end_of_rainbow_marketing_for_now_normalized_graph.html  chappell_roans_war_on_fame_with_eliza_mclamb_graph.html  (+57 more)
scripts/: batch_fix_graphs.py  build_site.py  clean.sh  curate_topics.py  deploy.sh  fix_inline_legend_styles.py  fix_legend_heights.py  generate_entity_graphs.py  generate_index.py  update_graph_styles.py  validate_deployment.py
site/: index.html  index.json  test.html
tests/: __init__.py  conftest.py  test_pipeline_smoke.py  test_types.py
(+22073 files in other folders)
